test/mutation_analysis/s0942_di_string_match/hafis/starchat/mutants/21/result.txt
./test/mutation_analysis/s0942_di_string_match/hafis/starchat/mutants/21/Solution.java:25: error: unreachable statement
        for (int i = s.length() - 1; false; i--) {
                                                 ^
1 error
